decoupling js from html

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -38,7 +38,8 @@
 				"vmware.vscode-spring-boot",
 				"ms-azuretools.vscode-docker",
 				"redhat.vscode-xml",
-				"redhat.vscode-yaml"
+				"redhat.vscode-yaml",
+				"prettier-standard-vscode"
 			]
 		}
 	}
