--- a/examples/hello-world/pom.xml
+++ b/examples/hello-world/pom.xml
@@ -5,9 +5,8 @@
 
 	<parent>
 		<groupId>info.jab.ms</groupId>
-		<artifactId>spring-boot-user-beans</artifactId>
+		<artifactId>examples</artifactId>
 		<version>0.1.0-SNAPSHOT</version>
-		<relativePath>../</relativePath>
 	</parent>
 	
 	<groupId>info.jab.ms</groupId>
