--- a/examples/hello-world/pom.xml
+++ b/examples/hello-world/pom.xml
@@ -25,12 +25,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<scope></scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+		<!-- The new dependency -->
 		<dependency>
 			<groupId>info.jab.ms</groupId>
 			<artifactId>spring-boot-user-beans-starter</artifactId>
@@ -57,7 +57,6 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>${spring-boot.version}</version>
 				<configuration>
-					<fork>true</fork>
 					<skip>false</skip>
 				</configuration>
 				<executions>
