Moving the endpoints to actuator

--- a/examples/hello-world/src/main/resources/application.properties
+++ b/examples/hello-world/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-management.endpoints.web.exposure.include=beans
 spring.output.ansi.enabled=always
+management.endpoints.web.exposure.include=beans,userbeans
