--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<groupId>info.jab.ms</groupId>
 	<artifactId>spring-boot-user-beans</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
@@ -15,7 +15,7 @@
 		<java.version>17</java.version>
 		<spring-boot.version>3.1.0</spring-boot.version>
 		<sonar.coverage.jacoco.xmlReportPaths>
-    		${project.basedir}/report-aggregate/target/site/jacoco-aggregate/jacoco.xml
+    		${project.basedir}/coverage-module/target/site/jacoco-aggregate/jacoco.xml
   		</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 
@@ -30,7 +30,7 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -41,6 +41,7 @@
 	<modules>
 		<module>spring-boot-user-beans-starter</module>
 		<module>examples</module>
+		<module>coverage-module</module>
 	</modules>
 
 	<build>
@@ -73,12 +74,18 @@
 				<version>0.8.10</version>
 				<executions>
 					<execution>
-						<id>report-aggregate</id>
-						<phase>verify</phase>
+						<id>prepare-unit-tests</id>
 						<goals>
-							<goal>report-aggregate</goal>
+							<goal>prepare-agent</goal>
 						</goals>
 					</execution>
+					<execution>
+                        <id>jacoco-report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
 				</executions>
 			</plugin>
 		</plugins>
