--- a/spring-boot-user-beans-starter/pom.xml
+++ b/spring-boot-user-beans-starter/pom.xml
@@ -80,6 +80,80 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>${spring-boot.version}</version>
 			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.10</version>
+				<executions>
+					<!-- to avoid bugs in some situations -->
+					<execution>
+					<id>default-prepare-agent</id>
+					<goals>
+						<goal>prepare-agent</goal>
+					</goals>
+					</execution>
+
+					<!-- create report during maven verify phase -->
+					<execution>
+						<id>report</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<!--
+					<execution>
+						<id>merge-results</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>merge</goal>
+						</goals>
+						<configuration>
+							<fileSets>
+							<fileSet>
+								<directory>${code.coverage.project.folder}</directory>
+								<includes>
+								<include>**/target/jacoco.exec</include>
+								</includes>
+							</fileSet>
+							</fileSets>
+							<destFile>${code.coverage.overall.data.folder}/aggregate.exec</destFile>
+						</configuration>
+					</execution>
+					-->
+
+					<!--
+					<execution>
+						<id>check</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<configuration>
+							<fileSet>
+								<directory>${code.coverage.project.folder}/target/classes</directory>
+							</fileSet>
+							<rules>
+
+								<rule>
+									<element>BUNDLE</element>
+									<limits>
+										<limit>
+											<counter>INSTRUCTION</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>80%</minimum>
+										</limit>
+									</limits>
+								</rule>
+
+							</rules>
+							<dataFile>${code.coverage.overall.data.folder}/aggregate.exec</dataFile>
+						</configuration>
+					</execution>
+					-->
+				</executions>
+			</plugin>
+
 		</plugins>
 	</build>
 
