Adding new jacoco configuration

--- a/coverage-module/pom.xml
+++ b/coverage-module/pom.xml
@@ -18,6 +18,9 @@
 
     <properties>
         <java.version>17</java.version>
+        <sonar.coverage.jacoco.xmlReportPaths>
+    		${project.basedir}/target/site/jacoco-aggregate/jacoco.xml
+  		</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
 
     <dependencies>
