--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>17</java.version>
 		<spring-boot.version>3.1.0</spring-boot.version>
+		<sonar.coverage.jacoco.xmlReportPaths>
+    		${project.basedir}/coverage-module/target/site/jacoco-aggregate/jacoco.xml
+  		</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 
 	<dependencyManagement>
