--- a/spring-boot-user-beans-starter/pom.xml
+++ b/spring-boot-user-beans-starter/pom.xml
@@ -71,6 +71,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.16.1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -79,6 +85,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>${spring-boot.version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.11.0</version>
+				<configuration> <!-- Compile java 17 compatible bytecode -->
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
@@ -101,28 +116,7 @@
 							<goal>report</goal>
 						</goals>
 					</execution>
-					<!--
-					<execution>
-						<id>merge-results</id>
-						<phase>verify</phase>
-						<goals>
-							<goal>merge</goal>
-						</goals>
-						<configuration>
-							<fileSets>
-							<fileSet>
-								<directory>${code.coverage.project.folder}</directory>
-								<includes>
-								<include>**/target/jacoco.exec</include>
-								</includes>
-							</fileSet>
-							</fileSets>
-							<destFile>${code.coverage.overall.data.folder}/aggregate.exec</destFile>
-						</configuration>
-					</execution>
-					-->
 
-					<!--
 					<execution>
 						<id>check</id>
 						<phase>verify</phase>
@@ -150,7 +144,6 @@
 							<dataFile>${code.coverage.overall.data.folder}/aggregate.exec</dataFile>
 						</configuration>
 					</execution>
-					-->
 				</executions>
 			</plugin>
 
