--- a/coverage-module/pom.xml
+++ b/coverage-module/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>info.jab.ms</groupId>
+		<groupId>info.jab</groupId>
 		<artifactId>spring-boot-user-beans</artifactId>
 		<version>0.1.0-SNAPSHOT</version>
 	</parent>
@@ -22,7 +22,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>info.jab.ms</groupId>
+            <groupId>info.jab</groupId>
 	        <artifactId>spring-boot-user-beans-starter</artifactId>
 	        <version>0.1.0-SNAPSHOT</version>
         </dependency>
