--- a/examples/hello-world-servlet/pom.xml
+++ b/examples/hello-world-servlet/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>info.jab.ms</groupId>
+		<groupId>info.jab</groupId>
 		<artifactId>examples</artifactId>
 		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 
-	<groupId>info.jab.ms</groupId>
+	<groupId>info.jab</groupId>
 	<artifactId>hello-world-servlet</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 	<name>hello-world-servlet</name>
@@ -71,7 +71,7 @@
 
 			<dependencies>
 				<dependency>
-					<groupId>info.jab.ms</groupId>
+					<groupId>info.jab</groupId>
 					<artifactId>spring-boot-user-beans-starter</artifactId>
 					<version>0.1.0-SNAPSHOT</version>
 				</dependency>
