--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>info.jab.ms</groupId>
+    <groupId>info.jab</groupId>
     <artifactId>spring-boot-user-beans</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <name>spring-boot-user-beans</name>
