--- a/coverage-module/pom.xml
+++ b/coverage-module/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>info.jab</groupId>
+		<groupId>io.github.jabrena</groupId>
 		<artifactId>spring-boot-user-beans</artifactId>
 		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 
-    <groupId>info.jab</groupId>
+    <groupId>io.github.jabrena</groupId>
     <artifactId>coverage-module</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <name>coverage-module</name>
@@ -22,7 +22,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>info.jab</groupId>
+            <groupId>io.github.jabrena</groupId>
 	        <artifactId>spring-boot-user-beans-starter</artifactId>
 	        <version>0.1.0-SNAPSHOT</version>
         </dependency>
