--- a/examples/hello-world-servlet/pom.xml
+++ b/examples/hello-world-servlet/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>info.jab</groupId>
+		<groupId>io.github.jabrena</groupId>
 		<artifactId>examples</artifactId>
 		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 
-	<groupId>info.jab</groupId>
+	<groupId>io.github.jabrena</groupId>
 	<artifactId>hello-world-servlet</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 	<name>hello-world-servlet</name>
@@ -38,7 +38,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>info.jab</groupId>
+			<groupId>io.github.jabrena</groupId>
 			<artifactId>spring-boot-user-beans-starter</artifactId>
 			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
