--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>info.jab</groupId>
+		<groupId>io.github.jabrena</groupId>
 		<artifactId>spring-boot-user-beans</artifactId>
 		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 
-    <groupId>info.jab</groupId>
+    <groupId>io.github.jabrena</groupId>
     <artifactId>examples</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
