--- a/spring-boot-user-beans-starter/pom.xml
+++ b/spring-boot-user-beans-starter/pom.xml
@@ -6,12 +6,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>info.jab</groupId>
+        <groupId>io.github.jabrena</groupId>
         <artifactId>spring-boot-user-beans</artifactId>
         <version>0.1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>info.jab</groupId>
+    <groupId>io.github.jabrena</groupId>
     <artifactId>spring-boot-user-beans-starter</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
