--- a/examples/hello-world-reactive/src/main/resources/application.properties
+++ b/examples/hello-world-reactive/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.output.ansi.enabled=always
 server.http2.enabled=true
-management.endpoints.web.exposure.include=beans,userbeans
+management.endpoints.web.exposure.include=beans,user-beans
