--- a/examples/hello-world-servlet/pom.xml
+++ b/examples/hello-world-servlet/pom.xml
@@ -39,10 +39,17 @@
 		</dependency>
 
 		<dependency>
+			<groupId>io.github.jabrena</groupId>
+			<artifactId>spring-boot-starter-user-beans</artifactId>
+			<version>0.2.0-SNAPSHOT</version>
+		</dependency>
+		<!--
+		<dependency>
 			<groupId>com.github.jabrena.spring-boot-user-beans</groupId>
 			<artifactId>spring-boot-starter-user-beans</artifactId>
-			<version>59ec932779</version>
+			<version>0.2.0-SNAPSHOT</version>
 		</dependency>
+		-->
 	</dependencies>
 
 	<build>
