Improving answers from ChatGTP

--- a/spring-boot-starter-user-beans/src/main/resources/io/github/jabrena/userbeans/application.properties
+++ b/spring-boot-starter-user-beans/src/main/resources/io/github/jabrena/userbeans/application.properties
@@ -1,2 +1,4 @@
 userbeans.openapi.url=https://api.openai.com/v1/completions
 userbeans.openapi.model=text-davinci-003
+userbeans.openapi.max_tokens=3000
+userbeans.openapi.temperature=0
