--- a/spring-boot-starter-user-beans/pom.xml
+++ b/spring-boot-starter-user-beans/pom.xml
@@ -69,6 +69,11 @@
             <version>2.27.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.pkslow</groupId>
+            <artifactId>google-bard</artifactId>
+            <version>0.3.4</version>
+        </dependency>
     </dependencies>
 
     <build>
